--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Mila</title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Ini title</h1>
+    </header>
+
+    <article>
+        <p>Ini kontennya</p>
+
+        <header>
+            <h1>ini title</h1>
+        </header>
+
+        <aside>
+            
+        </aside>
+    </article>
 </body>
 </html>
